apps/servarr/flaresolverr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: servarr
  labels:
    app.kubernetes.io/name: flaresolverr
    app.kubernetes.io/part-of: servarr-stack
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: flaresolverr
  ports:
    - name: http
      port: 8191
      targetPort: http
      protocol: TCP
